--- a/app/views/organizations/refills/index.html.erb
+++ b/app/views/organizations/refills/index.html.erb
@@ -1,13 +1,3 @@
-<%= render PageComponent.new(title: "Current balance") do |component| %>
-  <% component.with_action_list do %>
-    <div class="text-lg font-semibold text-gray-900">
-      Balance: <span data-controller="animated-number" data-animated-number-start-value="0" data-animated-number-end-value="<%= current_organization.credits %>" data-animated-number-duration-value="300"><%= current_organization.credits %></span>
-    </div>
-  <% end %>
-<% end %>
-
-<br>
-
 <%= render PageComponent.new(title: "Payment details") do |component| %>
   <% component.with_action_list do %>
     <%= button_to "Add payment method", add_payment_method_organization_refills_path(current_organization), method: :post, class: "btn btn-primary", data: { turbo: "false" } %>
@@ -40,7 +30,36 @@
 
 <br>
 
-<%= render "organizations/credits/credit_packs" %>
+<%= render PageComponent.new(title: "Top up") do |component| %>
+  <% component.with_action_list do %>
+    <div class="text-lg font-semibold text-gray-900">
+      Balance: <span data-controller="animated-number" data-animated-number-start-value="0" data-animated-number-end-value="<%= current_organization.credits %>" data-animated-number-duration-value="300"><%= current_organization.credits %></span>
+    </div>
+  <% end %>
+
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+    <% UsageCredits.credit_packs.each do |key, credit_pack| %>
+      <div class="bg-white rounded-lg shadow-lg p-6 border border-gray-200 hover:shadow-xl transition-shadow">
+        <div class="text-center space-y-4">
+          <h3 class="text-xl font-semibold text-gray-900"><%= credit_pack.name.to_s.titleize %></h3>
+          
+          <%= button_to number_to_currency(credit_pack.price_cents.to_f / 100, unit: credit_pack.price_currency), charge_payment_method_organization_refills_path(current_organization, credit_pack: key), 
+              method: :post, 
+              class: "btn btn-primary",
+              disabled: !@payment_methods.any?,
+              data: { turbo: "false" } %>
+          
+          <div class="space-y-2">
+            <p class="text-lg font-medium text-gray-900"><%= credit_pack.credits %> Credits</p>
+            <% if credit_pack.bonus_credits > 0 %>
+              <p class="text-sm text-green-600">+<%= credit_pack.bonus_credits %> Bonus Credits</p>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+<% end %>
 
 <br>
 
