--- a/app/views/organizations/refills/index.html.erb
+++ b/app/views/organizations/refills/index.html.erb
@@ -133,7 +133,7 @@
         </div>
         <div class="mt-4 pt-4 border-t border-gray-100">
           <div class="flex justify-between items-center">
-            <div class="space-y-2">
+            <div class="space-y-2 flex justify-between w-full">
               <div class="flex items-center space-x-3">
                 <span class="px-2 py-1 rounded-full <%= charge.data["amount_captured"] > 0 ? "bg-green-100 text-green-800" : "bg-yellow-100 text-yellow-800" %>">
                   <%= charge.data["amount_captured"] > 0 ? "Succeeded" : "Pending" %>
@@ -149,10 +149,6 @@
                   <% end %>
                 <% end %>
               </div>
-            </div>
-            <div class="text-right text-sm text-gray-500">
-              <p>Payment ID: <%= charge.processor_id %></p>
-              <p>Payment Method: <%= charge.data["payment_method_type"].titleize %></p>
             </div>
           </div>
         </div>
