add more title meta tags

--- a/app/views/organizations/dashboard/index.html.erb
+++ b/app/views/organizations/dashboard/index.html.erb
@@ -1,2 +1,4 @@
+<% content_for :title, "#{current_organization.name} Dashboard" %>
+
 <%= render PageComponent.new(title: "#{current_organization.name} Dashboard", full_width: true) do |component| %>
 <% end %>
