--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "Editing organization" %>
+<% content_for :title, t("organizations.edit.title") %>
 
-<%= render PageComponent.new(title: "Editing organization", content_container: true, full_width: false) do |component| %>
+<%= render PageComponent.new(title: t("organizations.edit.title"), content_container: true, full_width: false) do |component| %>
   <%= render "form", organization: @organization %>
-  <%= link_to "Cancel", @organization, class: "btn btn-secondary" %>
+  <%= link_to t("shared.actions.cancel"), @organization, class: "btn btn-secondary" %>
 <% end %>
