--- a/app/views/static/terms.html.erb
+++ b/app/views/static/terms.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, t(".title") %>
+
 <div>
   <h1 class="font-bold text-lx lg:text-3xll">Static#terms</h1>
   <p>Find me in app/views/static/terms.html.erb</p>
