--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -32,10 +32,10 @@
           <%= render "shared/sidebar_links" %>
         </div>
         <div class="border-t space-y-1 p-2">
-          <%= nav_link "Users", organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
+          <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
           <% if @current_membership.admin? %>
-            <%= nav_link "Billing #{subscription_status_label(current_organization)}", organization_subscriptions_path(current_organization), icon: "svg/credit-card.svg" if Rails.application.credentials.dig(:stripe, :private_key).present? %>
-            <%= nav_link "Settings", organization_path(current_organization), icon: "svg/cog-6-tooth.svg", active: [ [ "organizations" ], [ "edit", "show" ] ] %>
+            <%= nav_link t("organizations.subscriptions.index.title"), organization_subscriptions_path(current_organization), icon: subscription_status_label(current_organization) if Rails.application.credentials.dig(:stripe, :private_key).present? %>
+            <%= nav_link t("organizations.show.title"), organization_path(current_organization), icon: "svg/cog-6-tooth.svg", active: [ [ "organizations" ], [ "edit", "show" ] ] %>
           <% end %>
         </div>
       </div>
