--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -3,7 +3,7 @@
 <%= render PageComponent.new(title: t("organizations.show.title")) do |component| %>
   <% component.with_action_list do %>
     <%= link_to t("shared.actions.edit"), edit_organization_path(@organization), class: "btn btn-secondary" if policy(@organization).edit? %>
-    <%= link_to t("organizations.transfer.title"), organization_transfer_path(@organization), class: "btn btn-danger" if @organization.can_transfer?(current_user) %>
+    <%= link_to t("organizations.transfers.show.title"), organization_transfer_path(@organization), class: "btn btn-danger" if @organization.can_transfer?(current_user) %>
     <div class="inline-block">
       <%= button_to t("shared.actions.destroy"), @organization, method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "btn btn-danger" if policy(@organization).destroy? %>
     </div>
