--- a/app/views/organizations/credits/index.html.erb
+++ b/app/views/organizations/credits/index.html.erb
@@ -1,8 +1,6 @@
 <%= render PageComponent.new(title: "Balance") do |component| %>
   <% component.with_action_list do %>
-    <div class="text-lg font-semibold text-gray-900">
-      <span data-controller="animated-number" data-animated-number-start-value="0" data-animated-number-end-value="<%= current_organization.credits %>" data-animated-number-duration-value="300"><%= current_organization.credits %></span> credits
-    </div>
+    <%== credits_badge(current_organization) %>
   <% end %>
 <% end %>
 
