--- a/app/views/organizations/dashboard/index.html.erb
+++ b/app/views/organizations/dashboard/index.html.erb
@@ -1,4 +1,7 @@
 <% content_for :title, "#{current_organization.name} Dashboard" %>
 
 <%= render PageComponent.new(title: "#{current_organization.name} Dashboard", full_width: true) do |component| %>
+  <% component.with_action_list do %>
+    <%== credits_badge(current_organization) %>
+  <% end %>
 <% end %>
