--- a/app/views/organizations/refills/index.html.erb
+++ b/app/views/organizations/refills/index.html.erb
@@ -1,8 +1,6 @@
 <%= render PageComponent.new(title: "Balance") do |component| %>
   <% component.with_action_list do %>
-    <div class="text-lg font-semibold text-gray-900">
-      <span data-controller="animated-number" data-animated-number-start-value="0" data-animated-number-end-value="<%= current_organization.credits %>" data-animated-number-duration-value="300"><%= current_organization.credits %></span> credits
-    </div>
+    <%== credits_badge(current_organization) %>
   <% end %>
 <% end %>
 
@@ -66,7 +64,7 @@
               data: { turbo: "false" } %>
           
           <div class="space-y-2">
-            <p class="text-lg font-medium text-gray-900"><%= credit_pack.credits %> Credits</p>
+            <p class="text-lg font-medium text-gray-900"><%= format_credits(credit_pack.credits) %></p>
             <% if credit_pack.bonus_credits > 0 %>
               <p class="text-sm text-green-600">+<%= credit_pack.bonus_credits %> Bonus Credits</p>
             <% end %>
