--- a/app/views/organizations/refills/index.html.erb
+++ b/app/views/organizations/refills/index.html.erb
@@ -89,7 +89,7 @@
             <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" />
           </svg>
           <p class="text-sm text-gray-600">
-            Auto-refill will trigger when your balance falls below <span class="font-semibold text-gray-900"><%= UsageCredits::Wallet.auto_refill_threshold.amount %> credits</span>
+            Auto-refill will trigger when your balance falls below <span class="font-semibold text-gray-900"><%= UsageCredits.configuration.low_balance_threshold %> credits</span>
           </p>
         </div>
       </div>
