downcase dashboard label

--- a/app/views/organizations/dashboard/index.html.erb
+++ b/app/views/organizations/dashboard/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "#{current_organization.name} Dashboard" %>
+<% content_for :title, "#{current_organization.name} dashboard" %>
 
-<%= render PageComponent.new(title: "#{current_organization.name} Dashboard", full_width: true) do |component| %>
+<%= render PageComponent.new(title: "#{current_organization.name} dashboard", full_width: true) do |component| %>
 <% end %>
