--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -37,12 +37,15 @@
   }
 }
   :root {
+    --color-gray-50: #f9fafb;
+    --color-gray-100: #f9fafb;
     --color-gray-200: #e5e7eb;
     --color-gray-400: #9ca3af;
     --color-gray-500: #6b7280;
     --color-gray-600: #4b5563;
     --color-gray-700: #374151;
     --color-gray-800: #1f2937;
+    --color-gray-900: #111827;
     --color-blue-500: #3b82f6;
     --color-blue-600: #2563eb;
     --color-blue-700: #1d4ed8;
@@ -53,12 +56,15 @@
   
   @media (prefers-color-scheme: dark) {
     :root {
+    --color-gray-50: #111827;
+    --color-gray-100: #1f2937;
     --color-gray-200: #374151;
     --color-gray-400: #6b7280;
     --color-gray-500: #9ca3af;
     --color-gray-600: #d1d5db;
     --color-gray-700: #e5e7eb;
     --color-gray-800: #f3f4f6;
+    --color-gray-900: #f9fafb;
     --color-blue-500: #2563eb;
     --color-blue-600: #1d4ed8;
     --color-blue-700: #1e40af;
