--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="justify-around flex items-center lg:hidden sticky bottom-0 px-4 py-3 bg-white border-t">
+<nav class="justify-around flex items-center lg:hidden sticky bottom-0 px-4 py-3 bg-gray-100 border-t">
   <% if current_organization %>
     <%= active_link_to organization_dashboard_path(@organization), class_active: "!text-indigo-600", class: "flex flex-col items-center text-gray-600 hover:text-indigo-600 transition-colors duration-200 gap-1" do %>
       <%= inline_svg_tag "svg/home.svg", class: "size-6" %>
