--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -1,7 +1,7 @@
 <%# Mobile sidebar backdrop %>
 <div data-mobile-sidebar-target="backdrop" class="lg:hidden fixed inset-0 bg-gray-800/50 z-40 hidden" data-action="click->mobile-sidebar#close"></div>
 
-<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r bg-white h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
+<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r bg-gray-100 h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
   <%# Widescreen sidebar top %>
   <nav class="flex flex-row flex-grow divide-x">
     <div class="flex flex-col max-h-dvh overflow-y-auto p-2">
