--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -108,6 +108,10 @@
   @apply bg-red-500 text-white focus:bg-red-600 hover:bg-red-600;
 }
 
+.btn-warning {
+  @apply bg-amber-500 text-black focus:bg-amber-600 hover:bg-amber-600;
+}
+
 .btn-sm {
   @apply px-3 py-1 text-xs;
 }
